<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MordernArtUI</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="magenta_rectangle"> Magenta Rectangle </string>
    <string name="cyan_rectangle">Cyan Rectangle</string>
	<string name="blue_rectangle">Blue Rectangle</string>
	<string name="white_rectangle">White Rectangle</string>
	<string name="gray_rectangle">Gray Rectangle</string>
</resources>
