<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_window"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="100dp"
         android:layout_height="150dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:adjustViewBounds="true"
         android:contentDescription="@string/cyan_rectangle"
         android:padding="20dp"
         android:src="@drawable/cyan_shape" />

     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="250dp"
         android:layout_height="200dp"
         android:layout_alignBottom="@+id/imageView2"
         android:layout_alignParentLeft="true"
         android:layout_marginBottom="23dp"
         android:layout_marginLeft="62dp"
         android:contentDescription="@string/blue_rectangle"
         android:padding="20dp"
         android:src="@drawable/blue_shape" />

     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="200dp"
         android:layout_height="150dp"
         android:layout_alignParentLeft="true"
         android:layout_alignTop="@+id/imageView4"
         android:layout_marginTop="82dp"
         android:contentDescription="@string/magenta_rectangle"
         android:padding="20dp"
         android:src="@drawable/magenta_shape" />
     
      <ImageView
         android:id="@+id/imageView5"
         android:layout_width="150dp"
         android:layout_height="200dp"
         android:layout_alignParentLeft="true"
         android:layout_alignTop="@+id/imageView4"
         android:layout_marginTop="82dp"
         android:contentDescription="@string/white_rectangle"
         android:padding="20dp"
         android:src="@drawable/white_shape" />

     <ImageView
         android:id="@+id/imageView7"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_alignLeft="@+id/imageView4"
         android:layout_alignTop="@+id/imageView4"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="66dp"
         android:adjustViewBounds="true"
         android:contentDescription="@string/gray_rectangle"
         android:padding="20dp"
         android:src="@drawable/gray_shape" />

     <ImageView
         android:id="@+id/imageView6"
         android:layout_width="200dp"
         android:layout_height="220dp"
         android:layout_alignLeft="@+id/imageView7"
         android:layout_centerVertical="true"
         android:contentDescription="@string/magenta_rectangle"
         android:padding="20dp"
         android:src="@drawable/magenta_shape" />

     <ImageView
         android:id="@+id/imageView8"
         android:layout_width="200dp"
         android:layout_height="100dp"
         android:layout_alignRight="@+id/imageView6"
         android:layout_below="@+id/imageView7"
         android:layout_marginTop="34dp"
         android:contentDescription="@string/blue_rectangle"
         android:padding="20dp"
         android:src="@drawable/blue_shape" />

     <SeekBar
         android:id="@+id/seekBar1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/imageView8"
         android:layout_marginTop="48dp" />

</RelativeLayout>